# VaibeVoice

./: README.md  pyproject.toml  requirements.txt  run.py
gui/: README.md  index.html
gui/src/: App.tsx
gui/src/components/: AppSidebar.tsx
gui/src/hooks/: useApi.ts  useApiKeyStatus.ts
gui/src/pages/: History.tsx  Index.tsx  Language.tsx  Playground.tsx  Settings.tsx
src/: main.py  transcription_history.db
src/api/: __init__.py  transcription.py
src/audio/: recorder.py
src/db/: history.py  test_history.py
src/keyboard/: __init__.py  recorder.py
src/typing/: __init__.py  animation.py
src/ui/: __init__.py  menu.py
vaibvoice/: config.py  main.py
vaibvoice/api/: server.py
vaibvoice/api/models/: settings.py  transcription.py
vaibvoice/api/routes/: settings.py  stats.py  transcriptions.py
vaibvoice/core/: formatter.py  keyboard.py  recorder.py  transcriber.py
vaibvoice/db/: base.py
vaibvoice/db/repositories/: settings_repository.py  transcription_repository.py
vaibvoice/models/: settings.py  transcription.py
vaibvoice/services/: stats_service.py  transcription_service.py
vaibvoice/utils/: audio_utils.py
